<resources>
    <string name="app_name">CustomListView_sse</string>
    <string name="menu0">Menu0</string>
    <string name="beam_me_up">Beam Me Up</string>
    <string name="nuclear_wessels">Nuclear Wessels</string>
    <string name="live_long_and_prosper">Live Long and Prosper</string>
    <string name="phasers_on_stun">Phasers On Stun</string>
    <string name="kahn">Kahn!!!</string>
    <string-array name="episodes">
        <item>Spock\'s Brain</item>
        <item>Arena</item>
        <item>This Side of Paradise</item>
        <item>Mirror, Mirror</item>
        <item>Plato\'s Step Children</item>
        <item>The Naked Time</item>
        <item>The Trouble With Tribbles</item>
    </string-array>

    <string-array name="episode_urls">
        <item>https://en.wikipedia.org/wiki/Spock%27s_Brain</item>
        <item>http://www.imdb.com/title/tt0708418/</item>
        <item>https://en.wikipedia.org/wiki/This_Side_of_Paradise_(Star_Trek:_The_Original_Series)</item>
        <item>http://www.imdb.com/title/tt0708438/</item>
        <item>http://www.imdb.com/title/tt0708443/</item>
        <item>https://en.wikipedia.org/wiki/The_Naked_Time</item>
        <item>http://www.imdb.com/title/tt0708480/</item>
    </string-array>


    <string-array name="episode_descriptions">
        <item>Some people in swimsuits steal Spock\'s Brain. Hmm...</item>
        <item>Captain Kirk fights a plastic 3D Molded lizard.</item>
        <item>A flower explodes in Spock\'s face and makes him happy. </item>
        <item>Alternative Universe</item>
        <item>Captain Kirk and Spock play dress up.</item>
        <item>Sulu goes nuts.</item>
        <item>So cute!!</item>
    </string-array>


</resources>
